# Tablewrite

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  debug_segmentation.py  docker-compose.tablewrite.yml  docker-compose.test.yml  nonsense.txt  pyproject.toml  pytest.ini  repomix-output.xml  requirements.txt  test_segmentation_comparison.py  tree.txt
.github/: SETUP.md
dev/: README.md  benchmark_segmentation.py  compare_segmentation_methods.py  create_test_cases.py  debug_segmentation.py  sweep_temperature_params.py  verify_ai_classification.py
docs/: DOCKER_TESTING_REPORT.md  IMPLEMENTATION_PLAN.md  RELAY_SERVER_SETUP.md  SEARCH_ENDPOINT_ANALYSIS.md  SEARCH_ENDPOINT_QUICK_REFERENCE.md  actor-parsing-guide.md  compendium_integration.md  foundry_actor_structure.md  index.html
gallery/: index.html
plans/: 2025-01-02-weapon-activities-fix.md  2025-10-23-scene-extraction-and-artwork.md  2025-10-26-image-asset-extraction.md  2025-11-02-module-assistant-ui.md  2025-11-03-chat-ui-tool-system.md  2025-11-05-public-api-implementation.md  2025-11-09-automatic-image-insertion-in-journals.md  IMPLEMENTATION_PLAN.md  actor-extraction-test-plan.md  actor_parsing_design.md
reference/: RELAY_SERVER_SETUP.md
relay-server/: .gitignore  ARCHIVED.md  docker-compose.local.yml
scripts/: README_ITEMS.md  chapter2_to_html.py  chapter2_to_html.sh  delete_all_actors.py  detect_grid_autocorr.py  detect_grid_fft.py  detect_grid_hybrid.py  detect_grid_vectorized.py  fetch_actors.py  fetch_items.py  full_pipeline.py  generate_import_diagram.py  generate_scene_art.py  measure_failure_rate.py  pit_fiend_end_to_end.py  process_and_upload.py  process_pit_fiend.py  process_statblock.py  relay_logs.sh  relay_start.sh  relay_status.sh  relay_stop.sh  run_tests.sh  setup.sh  test_10_images.py  test_all_battlemaps.py  test_imagen4.py  test_make_run.py  test_multiple_actors.py  test_parallel_image_gen.py  test_redline_walls.py  test_reference_image.py  test_relay_connection.py
src/: api.py  config.py  exceptions.py  get_toc.py  image_styles.py  logging_config.py  pdf_to_xml.py  split_pdf.py  xml_to_html.py
tests/: __init__.py  conftest.py  foundry_init.py  test_config.py  test_main.py  (+3 more)
(+467 files in other folders)
